--- a/about.html
+++ b/about.html
@@ -1,200 +1,312 @@
 <!-- About -->
 
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
+  <!-- Head -->
 
-<!-- Head -->
-
-<head>
-    <meta charset='UTF-8'>
+  <head>
+    <meta charset="UTF-8" />
     <title>About · Zain Khoja</title>
-    <meta name='description' content='Zain Khoja is a software (but also sometimes other stuff) designer'>
+    <meta
+      name="description"
+      content="Zain Khoja is a software (but also sometimes other stuff) designer"
+    />
 
     <!-- Viewport -->
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- CSS -->
-    <link rel='stylesheet' href='css/style.css' type='text/css'>
-
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
 
     <!-- Favicons -->
-    <link href='images/zk-favicon-light.ico' rel='icon' id='favicon'>
+    <link href="images/zk-favicon-light.ico" rel="icon" id="favicon" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src='https://www.googletagmanager.com/gtag/js?id=UA-89012104-2'></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-89012104-2"
+    ></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
-        gtag('config', 'UA-89012104-2');
+      gtag('config', 'UA-89012104-2');
     </script>
 
     <!-- Open Graph preview -->
-    <meta property='og:url' content='https://zainkho.com'>
-    <meta property='og:type' content='website'>
-    <meta property='og:title' content='Zain Khoja'>
-    <meta property='og:description' content='Zain Khoja is a software (but also sometimes other stuff) designer'>
-    <meta property='og:image' content='https://zainkho.com/images/zk-screenshot-light.png' class='social-image'>
+    <meta property="og:url" content="https://zainkho.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Zain Khoja" />
+    <meta
+      property="og:description"
+      content="Zain Khoja is a software (but also sometimes other stuff) designer"
+    />
+    <meta
+      property="og:image"
+      content="https://zainkho.com/images/zk-screenshot-light.png"
+      class="social-image"
+    />
 
     <!-- Twitter preview -->
-    <meta name='twitter:card' content='summary_large_image'>
-    <meta property='twitter:domain' content='zainkho.com'>
-    <meta property='twitter:url' content='https://zainkho.com'>
-    <meta name='twitter:title' content='Zain Khoja'>
-    <meta name='twitter:description' content='Zain Khoja is a software (but also sometimes other stuff) designer'>
-    <meta name='twitter:image' content='https://zainkho.com/images/zk-screenshot-light.png' class='social-image'>
-</head>
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="zainkho.com" />
+    <meta property="twitter:url" content="https://zainkho.com" />
+    <meta name="twitter:title" content="Zain Khoja" />
+    <meta
+      name="twitter:description"
+      content="Zain Khoja is a software (but also sometimes other stuff) designer"
+    />
+    <meta
+      name="twitter:image"
+      content="https://zainkho.com/images/zk-screenshot-light.png"
+      class="social-image"
+    />
+  </head>
 
-
-<body class='column'>
+  <body class="column">
     <!-- Header -->
-    <header class='row'>
-        <!-- Line -->
-        <div class='column line-container'>
-            <div class='line' id='line-1'></div>
-            <div class='line' id='line-2'></div>
-            <div class='line' id='line-3'></div>
-            <div class='line' id='line-4'></div>
-        </div>
+    <header class="row">
+      <!-- Line -->
+      <div class="column line-container">
+        <div class="line" id="line-1"></div>
+        <div class="line" id="line-2"></div>
+        <div class="line" id="line-3"></div>
+        <div class="line" id="line-4"></div>
+      </div>
 
-        <!-- Actions -->
-        <nav class='row'>
-            <a href='/' class='row button'>
-                <svg>
-                    <use href='images/sprites.svg#home'></use>
-                </svg>
-                <span class='sh2'>Home</span>
-            </a>
-            <a href='about.html' class='row button' id='selected'>
-                <svg>
-                    <use href='images/sprites.svg#bookmark'></use>
-                </svg>
-                <span class='sh2'>About</span>
-            </a>
-            <a href='play.html' class='row button'>
-                <svg>
-                    <use href='images/sprites.svg#play'></use>
-                </svg>
-            </a>
+      <!-- Actions -->
+      <nav class="row">
+        <a href="/" class="row button">
+          <svg>
+            <use href="images/sprites.svg#home"></use>
+          </svg>
+          <span class="sh2">Home</span>
+        </a>
+        <a href="about.html" class="row button" id="selected">
+          <svg>
+            <use href="images/sprites.svg#bookmark"></use>
+          </svg>
+          <span class="sh2">About</span>
+        </a>
+        <a href="play.html" class="row button">
+          <svg>
+            <use href="images/sprites.svg#play"></use>
+          </svg>
+        </a>
 
-            <!-- Logo -->
-            <a href='/' aria-label='Go to homepage' class='row'><svg class='icon-m' id='zk-logo'>
-                    <defs>
-                        <!-- Definition for inset shadow that is used for zk-logo above -->
-                        <filter id='inset' x='0' y='0' width='32' height='32' filterUnits='userSpaceOnUse'
-                            color-interpolation-filters='sRGB'>
-                            <feFlood flood-opacity='0' result='BackgroundImageFix' />
-                            <feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape' />
-                            <feColorMatrix in='SourceAlpha' type='matrix'
-                                values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha' />
-                            <feOffset dy='1' />
-                            <feGaussianBlur stdDeviation='0.5' />
-                            <feComposite in2='hardAlpha' operator='arithmetic' k2='-1' k3='1' />
-                            <feColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0' />
-                            <feBlend mode='normal' in2='shape' result='effect1_innerShadow_946_14435' />
-                        </filter>
-                    </defs>
-                    <use href='images/sprites.svg#zk-logo' filter='url(#inset)'></use>
-                </svg></a>
-        </nav>
+        <!-- Logo -->
+        <a href="/" aria-label="Go to homepage" class="row"
+          ><svg class="icon-m" id="zk-logo">
+            <defs>
+              <!-- Definition for inset shadow that is used for zk-logo above -->
+              <filter
+                id="inset"
+                x="0"
+                y="0"
+                width="32"
+                height="32"
+                filterUnits="userSpaceOnUse"
+                color-interpolation-filters="sRGB"
+              >
+                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                <feBlend
+                  mode="normal"
+                  in="SourceGraphic"
+                  in2="BackgroundImageFix"
+                  result="shape"
+                />
+                <feColorMatrix
+                  in="SourceAlpha"
+                  type="matrix"
+                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                  result="hardAlpha"
+                />
+                <feOffset dy="1" />
+                <feGaussianBlur stdDeviation="0.5" />
+                <feComposite
+                  in2="hardAlpha"
+                  operator="arithmetic"
+                  k2="-1"
+                  k3="1"
+                />
+                <feColorMatrix
+                  type="matrix"
+                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"
+                />
+                <feBlend
+                  mode="normal"
+                  in2="shape"
+                  result="effect1_innerShadow_946_14435"
+                />
+              </filter>
+            </defs>
+            <use
+              href="images/sprites.svg#zk-logo"
+              filter="url(#inset)"
+            ></use></svg
+        ></a>
+      </nav>
     </header>
 
-    <main class='column'>
-        <!-- Title -->
-        <div class='column' id='title'>
-            <h1>Thanks for saying hi</h1>
-            <p class='sh1' id='subtitle'>Here's a bit more about who I am</p>
+    <main class="column">
+      <!-- Title -->
+      <div class="column" id="title">
+        <h1>Thanks for saying hi</h1>
+        <p class="sh1" id="subtitle">Here's a bit more about who I am</p>
+      </div>
+
+      <!-- Content -->
+      <div class="row content" id="bio">
+        <div class="column">
+          <p class="p1">
+            As you probably saw on the home page, I'm a software designer. I
+            currently live in New York City and work at Ramp.
+          </p>
+          <p class="p1">
+            Before that, I was at Cornell where I went to some classes but
+            mostly
+            <a href="https://bit.ly/IntroDPDSP20" target="_blank" rel="noopener"
+              >taught classes about design</a
+            >
+            <span class="sh2"
+              >[some talented pupils —
+              <a
+                href="https://tisealatise.webflow.io"
+                target="_blank"
+                rel="noopener"
+                >1</a
+              >,
+              <a
+                href="https://emilyromero.notion.site/emilyromero/Yello-My-name-is-Emily-8734e7293ccb416b8372d45523b801ef"
+                target="_blank"
+                rel="noopener"
+                >2</a
+              >]</span
+            >. In my free time, I met great friends and mentors without whom I
+            wouldn't be here today
+            <span class="sh2"
+              >[aforementioned mentors —
+              <a
+                href="https://twitter.com/sahkho"
+                target="_blank"
+                rel="noopener"
+                >1</a
+              >,
+              <a href="https://hasque.com" target="_blank" rel="noopener">2</a>,
+              <a href="https://gk3.website" target="_blank" rel="noopener">3</a
+              >]</span
+            >. If you want to learn more about me, feel free to check out some
+            of my inspirations
+            <span class="sh2"
+              >[<a
+                href="https://www.are.na/zain-khoja"
+                target="_blank"
+                rel="noopener"
+                >1</a
+              >,
+              <a
+                href="https://letterboxd.com/zainkho/"
+                target="_blank"
+                rel="noopener"
+                >2</a
+              >,
+              <a
+                href="https://zainkho.notion.site/54a75ae80c6145b1b0e663aa9f942fe7?v=1bc2ffcb55d04f6fba1689a1a9c48086&pvs=4"
+                target="_blank"
+                rel="noopener"
+                >3</a
+              >]</span
+            >.
+          </p>
+          <p class="p1">
+            You can find me at
+            <a href="https://maps.app.goo.gl/YexFTqwxCNSrojGu8" target="_blank"
+              >Abraço</a
+            >
+            most weekends or on the internet
+            <a href="https://twitter.com/zainkho" target="_blank">@zainkho</a>
+            posting about Dallas sports. I also love seeing cool stuff; if you
+            have something to show,
+            <a
+              href="mailto:zainkhoja7%40gmail.com?subject=Look%20I%20made%20something%20cool..."
+              target="_blank"
+              rel="noopener"
+              >shoot me a message</a
+            >.
+          </p>
         </div>
 
-        <!-- Content -->
-        <div class='row content' id='bio'>
-
-            <div class='column'>
-                <p class='p1'>
-                    As you probably saw on the home page, I'm a software designer. I currently live in New York City and
-                    work at Ramp.
-                </p>
-                <p class='p1'>
-                    Before that, I was at Cornell where I went to some classes but mostly <a
-                        href='https://bit.ly/IntroDPDSP20' target='_blank' rel='noopener'>taught classes about
-                        design</a> <span class='sh2'>[some talented pupils — <a href='https://tisealatise.webflow.io'
-                            target='_blank' rel='noopener'>1</a>, <a
-                            href='https://emilyromero.notion.site/emilyromero/Yello-My-name-is-Emily-8734e7293ccb416b8372d45523b801ef'
-                            target='_blank' rel='noopener'>2</a>]</span>. In my free time, I met great friends and
-                    mentors without whom I wouldn't be here today <span class='sh2'>[aforementioned mentors — <a
-                            href='https://twitter.com/sahkho' target='_blank' rel='noopener'>1</a>, <a
-                            href='https://hasque.com' target='_blank' rel='noopener'>2</a>, <a
-                            href='https://gk3.website' target='_blank' rel='noopener'>3</a>]</span>. If you want to
-                    learn more about me, feel free to check out some of my inspirations <span class='sh2'>[<a
-                            href='https://www.are.na/zain-khoja' target='_blank' rel='noopener'>1</a>, <a
-                            href='https://letterboxd.com/zainkho/' target='_blank' rel='noopener'>2</a>, <a
-                            href='https://zainkho.notion.site/54a75ae80c6145b1b0e663aa9f942fe7?v=1bc2ffcb55d04f6fba1689a1a9c48086&pvs=4'
-                            target='_blank' rel='noopener'>3</a>]</span>.
-                </p>
-                <p class='p1'>
-                    You can find me at <a href='https://maps.app.goo.gl/YexFTqwxCNSrojGu8' target='_blank'>Abraço</a>
-                    most weekends or on the internet <a href='https://twitter.com/zainkho'
-                        target='_blank'>@zainkho</a> posting about Dallas sports. I also love seeing cool stuff; if you
-                    have something to show, <a
-                        href='mailto:zainkhoja7%40gmail.com?subject=Look%20I%20made%20something%20cool...'
-                        target='_blank' rel='noopener'>shoot me a message</a>.
-                </p>
-            </div>
-
-            <img alt='avatar' src='images/zk-avi.jpg' id='avi'>
-
-        </div>
+        <img alt="avatar" src="images/zk-avi.jpg" id="avi" />
+      </div>
     </main>
 
-
     <!-- Footer -->
-    <footer class='row'>
-        <!-- Weather -->
-        <div class='row' id='weather'>
-            <svg id='weather-icon'></svg>
-            <span class='sh3' id='weather_description'></span>
-        </div>
+    <footer class="row">
+      <!-- Weather -->
+      <div class="row" id="weather">
+        <svg id="weather-icon"></svg>
+        <span class="sh3" id="weather_description"></span>
+      </div>
 
-        <!-- Links -->
-        <nav class='row'>
-            <a href='https://twitter.com/zainkho' aria-label='@zainkho on Twitter' target='_blank' rel='noopener'
-                class='row button'>
-                <svg>
-                    <use href='images/sprites.svg#twitter'></use>
-                </svg>
-            </a>
-            <a href='https://linkedin.com/in/zainkho' aria-label='Zain Khoja on Linkedin' target='_blank' rel='noopener'
-                class='row button'>
-                <svg>
-                    <use href='images/sprites.svg#linkedin'></use>
-                </svg>
-            </a>
-            <a href='https://drinkingsweettea.substack.com' aria-label='Drinking Sweet Tea newsletter on Substack'
-                target='_blank' rel='noopener' class='row button'>
-                <svg>
-                    <use href='images/sprites.svg#bookmark'></use>
-                </svg>
-            </a>
-            <a href='zainkho-resume.pdf' aria-label='View my resume' target='_blank' rel='noopener' class='row button'>
-                <svg>
-                    <use href='images/sprites.svg#briefcase'></use>
-                </svg>
-            </a>
-        </nav>
+      <!-- Links -->
+      <nav class="row">
+        <a
+          href="https://twitter.com/zainkho"
+          aria-label="@zainkho on Twitter"
+          target="_blank"
+          rel="noopener"
+          class="row button"
+        >
+          <svg>
+            <use href="images/sprites.svg#twitter"></use>
+          </svg>
+        </a>
+        <a
+          href="https://linkedin.com/in/zainkho"
+          aria-label="Zain Khoja on Linkedin"
+          target="_blank"
+          rel="noopener"
+          class="row button"
+        >
+          <svg>
+            <use href="images/sprites.svg#linkedin"></use>
+          </svg>
+        </a>
+        <a
+          href="https://drinkingsweettea.substack.com"
+          aria-label="Drinking Sweet Tea newsletter on Substack"
+          target="_blank"
+          rel="noopener"
+          class="row button"
+        >
+          <svg>
+            <use href="images/sprites.svg#bookmark"></use>
+          </svg>
+        </a>
+        <a
+          href="zainkho-resume.pdf"
+          aria-label="View my resume"
+          target="_blank"
+          rel="noopener"
+          class="row button"
+        >
+          <svg>
+            <use href="images/sprites.svg#briefcase"></use>
+          </svg>
+        </a>
+      </nav>
     </footer>
 
-
     <!-- Weather effects -->
-    <div class='weather-effect'></div>
-    <div id='splash'></div>
-
+    <div class="weather-effect"></div>
+    <div id="splash"></div>
 
     <!-- JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src='js/tsparticles.min.js'></script>
-    <script src='js/script.js'></script>
-
-</body>
-
+    <script src="js/tsparticles.min.js"></script>
+    <script src="js/script.js"></script>
+  </body>
 </html>
