--- a/play.html
+++ b/play.html
@@ -190,7 +190,7 @@
               loop
               muted
               playsinline
-              src="images/play/play-qr-code.mp4"
+              src="images/play/qr-code.mp4"
             ></video>
           </div>
           <a
